# warp-image

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/warp-core/: Cargo.toml
crates/warp-core/src/: decode.rs  encode.rs  lib.rs  transform.rs
scripts/: build-wasm.sh
